fix: set align item to flex start

--- a/src/components/repos-detail/components/repo-detail-item/RepoDetailItem.module.css
+++ b/src/components/repos-detail/components/repo-detail-item/RepoDetailItem.module.css
@@ -9,7 +9,7 @@
 .repo__item-header {
   display: flex;
   justify-content: space-between;
-  align-items: start;
+  align-items: flex-start;
   gap: 1.5rem;
 }
 
